# pixelupbench

./: .gitmodules  README.md  pyproject.toml  requirements.txt
configs/: aurasr_settings.py  openmodeldb_settings.py  upscaler_settings.py
data_models/: metrics_model.py
pixelup_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/metrics/: 4xHFA2kLUDVAESwinIR_light_batch_metrics_20241203_161021.json  4xLSDIRCompactR3_batch_metrics_20241202_174217.json  4xNomos2_hq_atd_batch_metrics_20241203_135125.json  4xNomos2_otf_esrgan_batch_metrics_20241203_145310.json  4xNomos8kSCHAT-S_batch_metrics_20241202_191908.json  4xNomosRealPLKSR_batch_metrics_20241202_160723.json  DeH264_batch_metrics_20241128_160212.json  aura_batch_metrics_20241125_152605.json  aura_batch_metrics_20241125_155704.json  aura_batch_metrics_20241202_144011.json  batch_metrics_20241125_145253.json  batch_metrics_20241130_145135.json  batch_metrics_20241130_152333.json  batch_metrics_20241202_170829.json  low_rel_1xDeH264_realplksr_metrics.json  low_rel_RealESRGAN_x4plus_metrics.json  low_res_1xDeH264_realplksr_metrics.json  low_res_RealESRGAN_x4plus_metrics.json  restore_1xDeH264_realplksr_metrics.json  swin2sr_batch_metrics_20241203_132814.json
scripts/: apisr.py  apisr_inference.py  aurasr.py  gradio_manager.py  openmodeldb_inference.py  swin2sr.py  upscaler.py
test_results/metrics/: 2xHFA2kCompact_batch_metrics_20241205_093355.json  2xHFA2kOmniSR_batch_metrics_20241205_075200.json  2xHFA2kReal-CUGAN_batch_metrics_20241205_083314.json  batch_metrics_20241204_175328.json  (+14 more)
(+5 files in other folders)
