[project]
name = "pixelup-bench"
version = "0.1.0"
description = "Benchmarking Pixel Based Video Upscalers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "basicsr>=1.4.2",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "numpy>=1.24.0",
    "gitpython>=3.1.32",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "configs*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
configs = ["*.yaml", "*.json"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["scripts", "configs"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.290",
]

[project.urls]
"Homepage" = "https://github.com/vikramxD/pixelupbench"
"Bug Tracker" = "https://github.com/vikramxD/pixelupbench/issues"